--- a/src/Miniblog.Core/wwwroot/manifest.json
+++ b/src/Miniblog.Core/wwwroot/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "www.ipv6address.info",
-  "short_name": "www.ipv6address.info",
-  "description": "This site is all about IPv6 addresses",
+  "name": "www.iaspnetcore.com",
+  "short_name": "www.iaspnetcore.com",
+  "description": "This site is all about www.iaspnetcore.com",
 
   "Information.\",": null,
   "icons": [
