--- a/src/Miniblog.Core/Miniblog.Core.csproj
+++ b/src/Miniblog.Core/Miniblog.Core.csproj
@@ -4,15 +4,21 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+
+    <OutputType>Exe</OutputType>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <PublishReadyToRun>true</PublishReadyToRun>
   </PropertyGroup>
 
   <ItemGroup>
-   
-  
+
+
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.250" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-   
+
     <PackageReference Include="WebMarkupMin.AspNetCore3" Version="2.8.3" />
     <PackageReference Include="WebMarkupMin.Core" Version="2.8.3" />
     <PackageReference Include="WebMarkupMin.NUglify" Version="2.8.1" />
