--- a/src/Miniblog.Core/Miniblog.Core.csproj
+++ b/src/Miniblog.Core/Miniblog.Core.csproj
@@ -13,7 +13,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Admin\**" />
+    <Content Remove="Views\Admin\**" />
+    <EmbeddedResource Remove="Views\Admin\**" />
+    <None Remove="Views\Admin\**" />
+  </ItemGroup>
 
+  <ItemGroup>
+
+    <PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.65" />
 
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.250" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
@@ -22,10 +30,6 @@
     <PackageReference Include="WebMarkupMin.AspNetCore3" Version="2.8.3" />
     <PackageReference Include="WebMarkupMin.Core" Version="2.8.3" />
     <PackageReference Include="WebMarkupMin.NUglify" Version="2.8.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Admin\" />
   </ItemGroup>
 
 </Project>
