--- a/src/Miniblog.Core/appsettings.json
+++ b/src/Miniblog.Core/appsettings.json
@@ -21,7 +21,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*"
