--- a/src/Miniblog.Core/appsettings.json
+++ b/src/Miniblog.Core/appsettings.json
@@ -20,7 +20,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Information"
     }
   },
