--- a/src/Miniblog.Core/appsettings.json
+++ b/src/Miniblog.Core/appsettings.json
@@ -21,7 +21,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft.AspNetCore": "Debug"
     }
   },
   "AllowedHosts": "*"
