--- a/src/Miniblog.Core/Miniblog.Core.csproj
+++ b/src/Miniblog.Core/Miniblog.Core.csproj
@@ -1,34 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
 
-  </PropertyGroup>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Views\Admin\**" />
-    <Content Remove="Views\Admin\**" />
-    <EmbeddedResource Remove="Views\Admin\**" />
-    <None Remove="Views\Admin\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Views\Admin\**" />
+		<Content Remove="Views\Admin\**" />
+		<EmbeddedResource Remove="Views\Admin\**" />
+		<None Remove="Views\Admin\**" />
+	</ItemGroup>
 
-  <ItemGroup>
+	<ItemGroup>
 
-    <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
+		<PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
 
-    <PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.65" />
+		<PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.65" />
 
-    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.372" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+		<PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.384" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 
-    <PackageReference Include="WebMarkupMin.AspNetCore6" Version="2.13.4" />
-    <PackageReference Include="WebMarkupMin.Core" Version="2.13.0" />
-    <PackageReference Include="WebMarkupMin.NUglify" Version="2.12.0" />
-  
-  <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-  </ItemGroup>
+		<PackageReference Include="WebMarkupMin.AspNetCore7" Version="2.13.8" />
+		<PackageReference Include="WebMarkupMin.Core" Version="2.13.8" />
+		<PackageReference Include="WebMarkupMin.NUglify" Version="2.13.6" />
+
+		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
+
+		<PackageReference Include="WilderMinds.MetaWeblog" Version="5.1.0" />
+	</ItemGroup>
 
 </Project>
