--- a/src/Miniblog.Core/Miniblog.Core.csproj
+++ b/src/Miniblog.Core/Miniblog.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 
@@ -18,19 +18,19 @@
 
 		<PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
 
-		<PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.65" />
+		<PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.85" />
 
-		<PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.396" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+		<PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.433" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
 
-		<PackageReference Include="WebMarkupMin.AspNetCore7" Version="2.15.2" />
-		<PackageReference Include="WebMarkupMin.Core" Version="2.14.0" />
-		<PackageReference Include="WebMarkupMin.NUglify" Version="2.15.1" />
+		<PackageReference Include="WebMarkupMin.AspNetCorelatest" Version="2.18.1" />
+		<PackageReference Include="WebMarkupMin.Core" Version="2.17.0" />
+		<PackageReference Include="WebMarkupMin.NUglify" Version="2.18.1" />
 
 		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
 
-		<PackageReference Include="WilderMinds.MetaWeblog" Version="5.1.1" />
+		<PackageReference Include="WilderMinds.MetaWeblog" Version="5.1.3" />
 	</ItemGroup>
 
 </Project>
